--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
 
 <header>
-  Hi
   <svg style="display: none;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62
         86">
     <g id="wizard">
@@ -180,7 +179,30 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+<script type="text/javascript">
+var fireballSize = 22;
 
+var getFireballSpeed = function(isMovingLeft){
+  if(isMovingLeft){
+    return movingLeft ? 2 : 5;
+};
+
+var wizardSpeed = 3;
+var wizardWidth = 70;
+
+var getWizardHeight = function(){
+  return wizardWidth * 1.337;
+};
+
+var getWizardX = function(gameFieldWidth){
+  return (gameFieldWidth - wizardWidth) / 2;
+};
+
+var getWizardY = function(getWizardHeight){
+  return gameFieldHeight / 3;
+};
+
+</script>
 <script src="js/game.js"></script>
 
 </body>
