--- a/index.html
+++ b/index.html
@@ -183,8 +183,7 @@
 var fireballSize = 22;
 
 var getFireballSpeed = function(isMovingLeft){
-  if(isMovingLeft){
-    return movingLeft ? 2 : 5;
+    return isMovingLeft ? 2 : 5;
 };
 
 var wizardSpeed = 3;
