--- a/index.html
+++ b/index.html
@@ -176,32 +176,34 @@
       </div>
       <p class="setup-similar-label">Петр Петров</p>
     </div>
+    <!-- <canvas id="canvas"></canvas> -->
   </template>
-  <script type="text/javascript">
+  <script>
     var fireballSize = 22;
 
     var getFireballSpeed = function (isMovingLeft) {
       return isMovingLeft ? 2 : 5;
-    };
+    }
 
-    var wizardSpeed = 3;
     var wizardWidth = 70;
 
     var getWizardHeight = function () {
-      return wizardWidth * 1.337;
-    };
+      return 1.337 * wizardWidth;
+    }
+
+    var wizardSpeed = 3;
 
     var getWizardX = function (gameFieldWidth) {
       return (gameFieldWidth - wizardWidth) / 2;
-    };
+    }
 
-    var getWizardY = function (getWizardHeight) {
+    var getWizardY = function (gameFieldHeight) {
       return gameFieldHeight / 3;
-    };
+    }
 
   </script>
-  <script src="js/game.js"></script>
   <script src="js/stat.js"></script>
+  <script src="js/game.js"></script>
 
 </body>
 
