--- a/index.html
+++ b/index.html
@@ -62,25 +62,27 @@
     <div class="demo"></div>
 
     <div class="setup-open">
-      <img src="img/user-1.jpg" class="setup-open-icon">
+      <img src="img/user-1.jpg" class="setup-open-icon" tabindex="0">
     </div>
   </header>
 
   <div class="overlay setup hidden">
-    <form class="setup-wizard-form" method="post" enctype="multipart/form-data" autocomplete="off">
+    <form class="setup-wizard-form" method="post" action="https://javascript.pages.academy/code-and-magick"
+      enctype="multipart/form-data" autocomplete="off">
 
       <div class="setup-title">
         <div class="setup-user">
           <div class="upload">
             <img class="setup-user-pic" src="img/user-1.jpg" />
-            <input type="file" name="avatar">
+            <input type="file" name="avatar" accept="image/png, image/jpeg">
           </div>
           <label>
-            <input type="text" name="username" maxlength="25" required class="setup-user-name" value="Синий Пендальф" />
+            <input type="text" name="username" class="setup-user-name" value="Синий Пендальф" tabindex="0" minlength="2"
+              maxlength="25" required />
           </label>
         </div>
 
-        <span class="setup-close">&times;</span>
+        <span class="setup-close" tabindex="0">&times;</span>
       </div>
 
 
@@ -103,7 +105,7 @@
           <div class="setup-wizard-wrap">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62 86" class="setup-wizard">
               <g class="wizard">
-                <use xlink:href="#wizard-coat" class="wizard-coat" style="fill: #6589a4"></use>
+                <use xlink:href="#wizard-coat" class="wizard-coat" style="fill: #6589a4" tabindex="0"></use>
                 <use xlink:href="#wizard-head" class="wizard-head"></use>
                 <use xlink:href="#wizard-eyes" class="wizard-eyes"></use>
                 <use xlink:href="#wizard-hands" class="wizard-hands"></use>
@@ -152,7 +154,7 @@
           </div>
         </div>
 
-        <button class="button setup-submit">Сохранить</button>
+        <button class="button setup-submit" type="submit">Сохранить</button>
       </div>
     </form>
   </div>
@@ -167,7 +169,7 @@
       <div class="setup-similar-content">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62 86" class="setup-similar-wizard">
           <g class="wizard">
-            <use xlink:href="#wizard-coat" class="wizard-coat"></use>
+            <use xlink:href="#wizard-coat" class="wizard-coat" tabindex="0"></use>
             <use xlink:href="#wizard-head" class="wizard-head"></use>
             <use xlink:href="#wizard-eyes" class="wizard-eyes"></use>
             <use xlink:href="#wizard-hands" class="wizard-hands"></use>
@@ -200,6 +202,7 @@
     }
 
   </script>
+  <script src="js/modal.js"></script>
   <script src="js/setup.js"></script>
   <script src="js/stat.js"></script>
   <script src="js/game.js"></script>
